feat(generate): declerative and programattic generation

--- a/examples/declarative/cqlc.yaml
+++ b/examples/declarative/cqlc.yaml
@@ -3,6 +3,7 @@ cql:
   - queries: "./queries.cql"
     schema: "./schema.cql"
     gen:
+      overwrite: true
       go:
         package: "example"
         out: "./example"
