fix(config): use the main config as input and fix file close leak

--- a/examples/declarative/cqlc.yaml
+++ b/examples/declarative/cqlc.yaml
@@ -1,9 +1,9 @@
 version: "1"
 cql:
-  - queries: "./queries.cql"
-    schema: "./schema.cql"
+  - queries: "queries.cql"
+    schema: "schema.cql"
     gen:
       overwrite: true
       go:
         package: "example"
-        out: "./example"
+        out: "example"
