--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -1,5 +1,9 @@
 name: pull-request
-on: [ pull_request ]
+on:
+  pull_request:
+    types:
+    - opened
+    - edited
 jobs:
   commitlint:
     runs-on: ubuntu-latest
