--- a/.github/workflows/commit.yaml
+++ b/.github/workflows/commit.yaml
@@ -14,6 +14,7 @@ jobs:
           version: '~> v2.6'
           install-only: true
       - run: go version
+      - run: go mod download
       - run: goreleaser release --clean --snapshot
   lint:
     needs: build
@@ -35,6 +36,7 @@ jobs:
         with:
           go-version: 1.23
       - run: go version
+      - run: go mod download
       - run: make cassandra-up
       - run: go test -coverprofile=coverage.txt ./...
       - uses: codecov/codecov-action@v5
