--- a/.github/workflows/commit.yaml
+++ b/.github/workflows/commit.yaml
@@ -17,7 +17,7 @@ jobs:
       - run: go mod download
       - run: goreleaser release --clean --snapshot
   go-lint:
-    needs: build
+    needs: go-build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -28,7 +28,7 @@ jobs:
         with:
           version: v1.63.4
   go-test:
-    needs: build
+    needs: go-build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
