--- a/.github/workflows/commit.yaml
+++ b/.github/workflows/commit.yaml
@@ -35,11 +35,29 @@ jobs:
         with:
           go-version: 1.23
       - run: go version
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '21'
+      - run: java --version
+      - name: install antlr
+        run: |
+          curl -O https://www.antlr.org/download/antlr-4.13.2-complete.jar
+          chmod +x antlr-4.13.2-complete.jar
+          mv antlr-4.13.2-complete.jar /usr/local/bin
+          echo '#!/bin/bash' > /usr/local/bin/antlr
+          echo 'CLASSPATH="/usr/local/bin/antlr-4.13.2-complete.jar:." exec java -jar /usr/local/bin/antlr-4.13.2-complete.jar "$@"' >> /usr/local/bin/antlr
+          chmod +x /usr/local/bin/antlr
+      - run: antlr
       - run: go mod download
       - run: go generate ./...
       - name: git status
         run: |
-          [[ -n "$(git status --porcelain)" ]] && echo "Go code generation caused changes. Please commit them." && git status && exit 1
+          if [[ -n "$(git status --porcelain)" ]]; then 
+            echo "Go code generation caused changes. Please commit them."
+            git status
+            exit 1
+          fi
   go-test:
     needs: go-build
     runs-on: ubuntu-latest
