chore(codecov): reconfigure to allow always code reports

--- a/codecov.yaml
+++ b/codecov.yaml
@@ -2,6 +2,9 @@ coverage:
   status:
     project:
       default:
+        enabled: yes
         target: auto
-comment:
-  require_changes: true
+    patch:
+      default:
+        enabled: yes
+        target: auto
