build(generate-and-format): generate all code and format repository as expected

--- a/.github/workflows/commit.yaml
+++ b/.github/workflows/commit.yaml
@@ -57,7 +57,7 @@ jobs:
           chmod +x /usr/local/bin/antlr
       - run: antlr
       - run: go mod download
-      - run: go generate ./...
+      - run: make generate-and-format
       - name: git status
         run: |
           if [[ -n "$(git status --porcelain)" ]]; then
