--- a/.github/workflows/commit.yaml
+++ b/.github/workflows/commit.yaml
@@ -23,18 +23,10 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: 1.23
-      - name: goimports
-        run: |
-          unformatted=$(goimports -l **/*.go)
-          if [ -n "$unformatted" ]; then
-            echo "The following files are not formatted, make sure to run goimports:"
-            echo "$unformatted"
-            exit 1
-          fi
       - uses: golangci/golangci-lint-action@v6
         with:
           version: v1.63.4
-  go-generate-validation:
+  go-generate-and-format-validation:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -56,6 +48,7 @@ jobs:
           echo 'CLASSPATH="/usr/local/bin/antlr-4.13.2-complete.jar:." exec java -jar /usr/local/bin/antlr-4.13.2-complete.jar "$@"' >> /usr/local/bin/antlr
           chmod +x /usr/local/bin/antlr
       - run: antlr
+      - run: go install golang.org/x/tools/cmd/goimports@latest
       - run: go mod download
       - run: make generate-and-format
       - name: git status
