--- a/.github/workflows/commit.yaml
+++ b/.github/workflows/commit.yaml
@@ -49,6 +49,7 @@ jobs:
           chmod +x /usr/local/bin/antlr
       - run: antlr
       - run: go install golang.org/x/tools/cmd/goimports@latest
+      - run: go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
       - run: go mod download
       - run: make generate-and-format
       - name: git status
