--- a/.github/workflows/commit.yaml
+++ b/.github/workflows/commit.yaml
@@ -69,6 +69,7 @@ jobs:
       - run: go version
       - run: go mod download
       - run: make cassandra-up
+      - run: make cassandra-healthcheck
       - run: go test -coverprofile=coverage.txt ./...
       - uses: codecov/codecov-action@v5
         with:
