--- a/compose.yaml
+++ b/compose.yaml
@@ -7,6 +7,7 @@ services:
       - CASSANDRA_DC=dc1
       - CASSANDRA_RACK=r1
       - CASSANDRA_START_RPC=true
+      - CASSANDRA_DISABLE_AUTO_BOOTSTRAP=true
     healthcheck:
       test: ["CMD-SHELL", "cqlsh -e 'describe cluster' 127.0.0.1"]
       interval: 30s
