--- a/.github/workflows/commit.yaml
+++ b/.github/workflows/commit.yaml
@@ -11,7 +11,7 @@ jobs:
       - uses: goreleaser/goreleaser-action@v6
         with:
           distribution: goreleaser
-          version: '~> v2.6'
+          version: "~> v2.6"
           install-only: true
       - run: go version
       - run: go mod download
@@ -26,7 +26,7 @@ jobs:
       - uses: golangci/golangci-lint-action@v6
         with:
           version: v1.63.4
-  go-generate-validation:
+  go-generate-and-format-validation:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -36,8 +36,8 @@ jobs:
       - run: go version
       - uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
-          java-version: '21'
+          distribution: "temurin"
+          java-version: "21"
       - run: java --version
       - name: install antlr
         run: |
@@ -48,11 +48,13 @@ jobs:
           echo 'CLASSPATH="/usr/local/bin/antlr-4.13.2-complete.jar:." exec java -jar /usr/local/bin/antlr-4.13.2-complete.jar "$@"' >> /usr/local/bin/antlr
           chmod +x /usr/local/bin/antlr
       - run: antlr
+      - run: go install golang.org/x/tools/cmd/goimports@latest
+      - run: go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
       - run: go mod download
-      - run: go generate ./...
+      - run: make generate-and-format
       - name: git status
         run: |
-          if [[ -n "$(git status --porcelain)" ]]; then 
+          if [[ -n "$(git status --porcelain)" ]]; then
             echo "Go code generation caused changes. Please commit them."
             git status
             exit 1
@@ -67,6 +69,7 @@ jobs:
       - run: go version
       - run: go mod download
       - run: make cassandra-up
+      - run: make cassandra-healthcheck
       - run: go test -coverprofile=coverage.txt ./...
       - uses: codecov/codecov-action@v5
         with:
