--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -5,6 +5,11 @@ builds:
     binary: cqlc
     env:
       - CGO_ENABLED=0
+    ldflags:
+      - -s -w
+      - -X main.version=v{{.Version}}
+      - -X main.commit={{.Commit}}
+      - -X main.date={{.Date}}
     goos:
       - linux
       - windows
@@ -13,7 +18,7 @@ builds:
 dist: ./bin
 
 archives:
-  - formats: [ 'tar.gz' ]
+  - formats: ["tar.gz"]
     name_template: >-
       {{ .ProjectName }}-
       {{- .Os }}-
@@ -23,7 +28,7 @@ archives:
       {{- if .Arm }}v{{ .Arm }}{{ end }}
     format_overrides:
       - goos: windows
-        formats: [ 'zip' ]
+        formats: ["zip"]
 
 changelog:
   sort: asc
