--- a/.github/workflows/commit.yaml
+++ b/.github/workflows/commit.yaml
@@ -68,6 +68,7 @@ jobs:
           go-version: 1.23
       - run: go version
       - run: go mod download
+      - run: go install golang.org/x/tools/cmd/goimports@latest
       - run: make cassandra-up
       - run: make cassandra-healthcheck
       - run: go test -coverprofile=coverage.txt ./...
