--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -30,6 +30,8 @@ jobs:
         with:
           go-version: 1.24
       - uses: golangci/golangci-lint-action@v6
+        with:
+          version: v1.64.4
   go-generate-and-format-validation:
     runs-on: ubuntu-latest
     steps:
