ci(release): add the correct permissions

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -5,13 +5,15 @@ on:
       - v*
 jobs:
   goreleaser:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
           go-version: 1.24
-      - uses: ncipollo/release-action@v1
+      # - uses: ncipollo/release-action@v1
       - uses: goreleaser/goreleaser-action@v6
         with:
           distribution: goreleaser
